# OpenGL_cpp_book

./: .gitignore  CMakeLists.txt  README.md  previous_try.txt
Project_1/: CMakeLists.txt  main.cpp
Project_2/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
Project_3/: CMakeLists.txt  fragment.glsl  main.cpp
Project_4/: CMakeLists.txt  main.cpp  transcribed.txt  vertex.glsl
Project_5/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
my_lib/: CMakeLists.txt  LOGGING.cpp  LOGGING.hpp  Shader.hpp  Shader_Source.cpp  Shader_Source.hpp  _cpp.cpp  _cpp.hpp  print.cpp  print.hpp
